Update pipfile, and .env example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-NOTION_TOKEN=secret_U307tJJUT
-DISCORD_BOT_TOKEN=MTEzMjYzMgY
+# Discord Bot Token
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+
+# Notion API Token
+NOTION_TOKEN=your_notion_token_here
+
+# Database
+DB_PASSWORD=your_secure_password_here
+DATABASE_URL=postgresql+asyncpg://notion_bot:notion_bot@localhost:5432/notion_bot
+
+# Notification Channels
+NOTION_NOTIFICATION_CHANNELS=your_channel_id/s_here
