Update .env.example, db connect using heroku, and reorg some func logic

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Discord Bot Token
-DISCORD_BOT_TOKEN=your_discord_bot_token_here
+# Database Configuration
+DB_USER=notion_bot
+DB_NAME=notion_bot
+DB_HOST=localhost
+DB_PASSWORD=your_password_here
+DATABASE_URL=postgresql://notion_bot:your_password_here@localhost:5432/notion_bot
 
-# Notion API Token
-NOTION_TOKEN=your_notion_token_here
-
-# Database
-DB_PASSWORD=your_secure_password_here
-DATABASE_URL=postgresql+asyncpg://notion_bot:notion_bot@localhost:5432/notion_bot
-
-# Notification Channels
-NOTION_NOTIFICATION_CHANNELS=your_channel_id/s_here
+# Application Settings
+ENV=development
+NOTION_TOKEN=your_notion_token
+NOTION_DATABASE_ID=your_database_id
+DISCORD_TOKEN=your_discord_token
