--- a/Pipfile
+++ b/Pipfile
@@ -4,17 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-discord-py = "*"
-aiohttp = "*"
-aiosqlite = "*"
-asyncpg = "*"
-python-dotenv = "*"
-notion-client = "*"
-"discord.py" = "*"
-pytest = "*"
-pytest-asyncio = "*"
-sqlalchemy = "*"
+discord-py = ">=2.0.0"
+sqlalchemy = ">=2.0.0"
+asyncpg = ">=0.27.0"
+python-dotenv = ">=0.19.0"
+aiosqlite = ">=0.17.0"
 
 [dev-packages]
 pytest = "*"
 pytest-asyncio = "*"
+black = "*"
+flake8 = "*"
+
+[requires]
+python_version = "3.9"
