--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ DB_USER=notion_bot
 DB_NAME=notion_bot
 DB_HOST=localhost
 DB_PASSWORD=your_password_here
+
+# Batbase URL override
 DATABASE_URL=postgresql://notion_bot:your_password_here@localhost:5432/notion_bot
 
 # Application Settings
