small envar refactor

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,16 @@
-# Database Configuration
+# Database configuration
 DB_USER=notion_bot
 DB_NAME=notion_bot
 DB_HOST=localhost
 DB_PASSWORD=your_password_here
 
-# Batbase URL override
+# Dabase URL override
 DATABASE_URL=postgresql://notion_bot:your_password_here@localhost:5432/notion_bot
 
-# Application Settings
-NOTION_TOKEN=your_notion_token
+# Discord settings
 DISCORD_BOT_TOKEN=your_discord_token
-NOTION_NOTIFICATION_CHANNELS=1191205161310363709
+
+# Notion settings
+NOTION_TOKEN=your_notion_token
+NOTION_DATABASE_ID=07752fd5ba8e44c7b8e48bfee50f0545
+NOTION_NOTIFICATION_CHANNELS=1191205161310363709 # comma separated list of channel ids
